[tool.poetry]
name = "eda-polars-way"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.1.0"
jupyter = "^1.0.0"
jupyterlab = "^4.2.3"
hvplot = "^0.10.0"
pyarrow = "^16.1.0"
pandas = "^2.2.2"
meteostat = "^1.6.8"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
